--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,43 @@
-name: Deploy Angular to VPS (Apache)
+name: Deploy Angular App
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
-  build-deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout código
+        uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v4
+      - name: Instalar Node
+        uses: actions/setup-node@v4
         with:
-          node-version: "20"
-          
-      - run: npm ci
-      - run: npm run build -- --configuration production
+          node-version: 20
 
-      - name: Inspect dist
-        run: |
-          ls -la dist
-          ls -la dist/* || true
-          ls -la dist/*/browser || true
+      - name: Instalar dependencias
+        run: npm ci
 
-      - name: Deploy via rsync
-        uses: burnett01/rsync-deployments@7.0.1
+      - name: Build producción
+        run: npx ng build --configuration production
+
+      - name: Deploy al VPS
+        uses: appleboy/ssh-action@v1.0.0
         with:
-          switches: -avzr --delete
-          path: dist/GMAJ_PruebaTrimestral2/browser/
-          remote_path: ${{ secrets.VPS_PATH }}
-          remote_host: ${{ secrets.VPS_HOST }}
-          remote_user: ${{ secrets.VPS_USER }}
-          remote_key: ${{ secrets.VPS_SSH_KEY }}
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            rm -rf /var/www/html/examen/*
+
+      - name: Copiar archivos al VPS
+        uses: appleboy/scp-action@v0.1.3
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "dist/GMAJ_PruebaTrimestral2_DWEC/browser/**"
+          target: "/var/www/html/examen"
